releases/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: grafana.adrianh.net
    http:
      paths:
      - backend:
          serviceName: monitoring-kube-prometheus-stack-grafana
          servicePort: 80
        path: /
